safemlx-sys/src/bindings.rs

extern "C" {
    pub fn mlx_kron(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_left_shift(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_less(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_less_equal(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_linspace(
        res: *mut mlx_array,
        start: f64,
        stop: f64,
        num: ::std::os::raw::c_int,
        dtype: mlx_dtype,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_log(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_log10(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_log1p(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_log2(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_logaddexp(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_logcumsumexp(
        res: *mut mlx_array,
        a: mlx_array,
        axis: ::std::os::raw::c_int,
        reverse: bool,
        inclusive: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_logical_and(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_logical_not(
        res: *mut mlx_array,
        a: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_logical_or(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_logsumexp_axes(
        res: *mut mlx_array,
        a: mlx_array,
        axes: *const ::std::os::raw::c_int,
        axes_num: usize,
        keepdims: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_logsumexp_axis(
        res: *mut mlx_array,
        a: mlx_array,
        axis: ::std::os::raw::c_int,
        keepdims: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_logsumexp(
        res: *mut mlx_array,
        a: mlx_array,
        keepdims: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_masked_scatter(
        res: *mut mlx_array,
        a: mlx_array,
        mask: mlx_array,
        src: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_matmul(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_max_axes(
        res: *mut mlx_array,
        a: mlx_array,
        axes: *const ::std::os::raw::c_int,
        axes_num: usize,
        keepdims: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_max_axis(
        res: *mut mlx_array,
        a: mlx_array,
        axis: ::std::os::raw::c_int,
        keepdims: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_max(
        res: *mut mlx_array,
        a: mlx_array,
        keepdims: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_maximum(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_mean_axes(
        res: *mut mlx_array,
        a: mlx_array,
        axes: *const ::std::os::raw::c_int,
        axes_num: usize,
        keepdims: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_mean_axis(
        res: *mut mlx_array,
        a: mlx_array,
        axis: ::std::os::raw::c_int,
        keepdims: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_mean(
        res: *mut mlx_array,
        a: mlx_array,
        keepdims: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_median(
        res: *mut mlx_array,
        a: mlx_array,
        axes: *const ::std::os::raw::c_int,
        axes_num: usize,
        keepdims: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_meshgrid(
        res: *mut mlx_vector_array,
        arrays: mlx_vector_array,
        sparse: bool,
        indexing: *const ::std::os::raw::c_char,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_min_axes(
        res: *mut mlx_array,
        a: mlx_array,
        axes: *const ::std::os::raw::c_int,
        axes_num: usize,
        keepdims: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_min_axis(
        res: *mut mlx_array,
        a: mlx_array,
        axis: ::std::os::raw::c_int,
        keepdims: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_min(
        res: *mut mlx_array,
        a: mlx_array,
        keepdims: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_minimum(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_moveaxis(
        res: *mut mlx_array,
        a: mlx_array,
        source: ::std::os::raw::c_int,
        destination: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_multiply(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_nan_to_num(
        res: *mut mlx_array,
        a: mlx_array,
        nan: f32,
        posinf: mlx_optional_float,
        neginf: mlx_optional_float,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_negative(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_not_equal(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_number_of_elements(
        res: *mut mlx_array,
        a: mlx_array,
        axes: *const ::std::os::raw::c_int,
        axes_num: usize,
        inverted: bool,
        dtype: mlx_dtype,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_ones(
        res: *mut mlx_array,
        shape: *const ::std::os::raw::c_int,
        shape_num: usize,
        dtype: mlx_dtype,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_ones_like(res: *mut mlx_array, a: mlx_array, s: mlx_stream)
    -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_outer(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_pad(
        res: *mut mlx_array,
        a: mlx_array,
        axes: *const ::std::os::raw::c_int,
        axes_num: usize,
        low_pad_size: *const ::std::os::raw::c_int,
        low_pad_size_num: usize,
        high_pad_size: *const ::std::os::raw::c_int,
        high_pad_size_num: usize,
        pad_value: mlx_array,
        mode: *const ::std::os::raw::c_char,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_pad_symmetric(
        res: *mut mlx_array,
        a: mlx_array,
        pad_width: ::std::os::raw::c_int,
        pad_value: mlx_array,
        mode: *const ::std::os::raw::c_char,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_partition_axis(
        res: *mut mlx_array,
        a: mlx_array,
        kth: ::std::os::raw::c_int,
        axis: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_partition(
        res: *mut mlx_array,
        a: mlx_array,
        kth: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_power(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_prod_axes(
        res: *mut mlx_array,
        a: mlx_array,
        axes: *const ::std::os::raw::c_int,
        axes_num: usize,
        keepdims: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_prod_axis(
        res: *mut mlx_array,
        a: mlx_array,
        axis: ::std::os::raw::c_int,
        keepdims: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_prod(
        res: *mut mlx_array,
        a: mlx_array,
        keepdims: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_put_along_axis(
        res: *mut mlx_array,
        a: mlx_array,
        indices: mlx_array,
        values: mlx_array,
        axis: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_qqmm(
        res: *mut mlx_array,
        x: mlx_array,
        w: mlx_array,
        w_scales: mlx_array,
        group_size: mlx_optional_int,
        bits: mlx_optional_int,
        mode: *const ::std::os::raw::c_char,
        global_scale_x: mlx_array,
        global_scale_w: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_quantize(
        res: *mut mlx_vector_array,
        w: mlx_array,
        group_size: mlx_optional_int,
        bits: mlx_optional_int,
        mode: *const ::std::os::raw::c_char,
        global_scale: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_quantized_matmul(
        res: *mut mlx_array,
        x: mlx_array,
        w: mlx_array,
        scales: mlx_array,
        biases: mlx_array,
        transpose: bool,
        group_size: mlx_optional_int,
        bits: mlx_optional_int,
        mode: *const ::std::os::raw::c_char,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_radians(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_real(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_reciprocal(
        res: *mut mlx_array,
        a: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_remainder(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_repeat_axis(
        res: *mut mlx_array,
        arr: mlx_array,
        repeats: ::std::os::raw::c_int,
        axis: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_repeat(
        res: *mut mlx_array,
        arr: mlx_array,
        repeats: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_reshape(
        res: *mut mlx_array,
        a: mlx_array,
        shape: *const ::std::os::raw::c_int,
        shape_num: usize,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
